docs/v2.0.0/_sources/gallery/experiment/sphere/sphere_a1_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_a1_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_a1_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_a1_vs_diameter.py:


Sphere: A1 scattering coefficient
===================================

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-17

.. code-block:: Python

    import numpy as np

    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyMieSim.units import nanometer, degree, watt, AU, RIU








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 19-25

.. code-block:: Python

    source = Gaussian(
        wavelength=400 * nanometer,
        polarization=[0] * degree,
        optical_power=1e-6 * watt,
        NA=0.2 * AU
    )







.. GENERATED FROM PYTHON SOURCE LINES 26-27

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 27-34

.. code-block:: Python

    scatterer = Sphere(
        diameter=np.linspace(300, 1000, 100) * nanometer,
        property=[1.2, 1.25] * RIU,
        medium_property=[1.0] * RIU,
        source=source
    )
    #







.. GENERATED FROM PYTHON SOURCE LINES 35-36

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 36-38

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source)








.. GENERATED FROM PYTHON SOURCE LINES 39-40

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 40-43

.. code-block:: Python

    dataframe = experiment.get('a1')

    # print(dataframe)







.. GENERATED FROM PYTHON SOURCE LINES 44-45

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 45-46

.. code-block:: Python

    dataframe.plot_data(x='scatterer:diameter', std='scatterer:property')



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_a1_vs_diameter_001.png
   :alt: sphere a1 vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_a1_vs_diameter_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.291 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_a1_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_a1_vs_diameter.ipynb <sphere_a1_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_a1_vs_diameter.py <sphere_a1_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_a1_vs_diameter.zip <sphere_a1_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
